--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
-<div>
-  <div class="order-booking-map" id="orderBookingMap"></div>
+<div class="container">
+  <div class="row">
+    <div class="order-booking-map" id="orderBookingMap"></div>
+  </div>
+  <div class="row">
+    <div class="col-sm mt-3">
+      <button class="btn btn-success">GO</button>
+    </div>
+    <div class="col-sm">
+      <button class="btn btn-success">GO</button>
+    </div>
+    <div class="col-sm">
+      <button class="btn btn-success">GO</button>
+    </div>
+  </div>
 </div>
