--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,10 @@
     <div class="col-sm mt-3">
       <button class="btn btn-success" (click)="addItem()">ADD</button>
     </div>
-    <div class="col-sm">
-      <button class="btn btn-success">GO</button>
+    <div class="col-sm mt-3">
+      <button class="btn btn-success" (click)="eta(eta_start, eta_end)">ETA</button>
     </div>
-    <div class="col-sm">
+    <div class="col-sm mt-3">
       <button class="btn btn-success">GO</button>
     </div>
   </div>
