--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="row">
     <div class="col-sm mt-3">
-      <button class="btn btn-success" (click)="addItem()">ADD</button>
+      <button class="btn btn-success" (click)="addDriver()">ADD</button>
     </div>
     <div class="col-sm mt-3">
       <button class="btn btn-success" (click)="eta(eta_start, eta_end)">ETA</button>
