--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,4 +18,9 @@
       </div>
     </div>
   </div>
+  <div class="row">
+      <div class="col-lg-8 m-3">
+          <div class="polyLine-map" id="polyLineMap"></div>
+        </div>
+  </div>
 </div>
