--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
-.order-booking-map {
-    height: 500px;
-    width: 100%
-  }
+.order-booking-map,
+.polyLine-map {
+  height: 500px;
+  width: 100%
+}
